--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,9 @@
 @font-face {
-    font-family: 'serverless';
-    src: url('./fonts/serverless-regular.woff2') format('woff2'),
-         url('./fonts/serverless-regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: "serverless";
+  src: url("./fonts/serverless-regular.woff2") format("woff2"),
+    url("./fonts/serverless-regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 html,
@@ -18,18 +18,14 @@ div {
   padding: 0;
   line-height: normal;
   background: var(--mainBg);
-  font-family: 'serverless', 'HelveticaNeue-Regular', 'Helvetica Neue Regular', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
+  font-family: "serverless", "HelveticaNeue-Regular", "Helvetica Neue Regular",
+    "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
   font-size: 14px;
   line-height: 20px;
   color: #000000;
   word-wrap: break-word;
   letter-spacing: 0.25px;
-}
-
-html,
-body {
-  background: #000000;
 }
 
 .container {
@@ -85,19 +81,19 @@ body {
   height: 100px;
   width: 400px;
   border-radius: 4px;
-  border: 3px solid rgba(255,255,255,0.3);
+  border: 3px solid rgba(255, 255, 255, 0.3);
   font-size: 26px;
-  color: #FFFFFF;
+  color: #ffffff;
   transition: all ease 200ms;
 }
 
 .button:hover {
   cursor: pointer;
-  border: 3px solid rgba(255,255,255,1);
+  border: 3px solid rgba(255, 255, 255, 1);
 }
 
 .button:active {
-  border-color: rgba(255,255,255,0.3);
+  border-color: rgba(255, 255, 255, 0.3);
 }
 
 .buttonInner {
@@ -111,7 +107,7 @@ body {
   align-items: flex-end;
   padding-top: 30px;
   padding-right: 20px;
-  color: #FD5750;
+  color: #fd5750;
   font-size: 62px;
   user-select: none;
 }
@@ -119,7 +115,7 @@ body {
 .buttonRight {
   align-items: flex-start;
   padding-top: 36px;
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 20px;
   user-select: none;
 }
@@ -129,11 +125,19 @@ body {
  */
 
 @keyframes fadeIn {
- from {
-   opacity: 0;
- }
+  from {
+    opacity: 0;
+  }
 
- to {
-   opacity: 1;
- }
+  to {
+    opacity: 1;
+  }
+}
+
+img {
+  width: 200px;
+  height: 200px;
+}
+ul li {
+  list-style: none;
 }
