--- a/src/app.css
+++ b/src/app.css
@@ -9,8 +9,6 @@
 html,
 body,
 div {
-  display: flex;
-  flex-direction: column;
   box-sizing: border-box;
   height: 100%;
   width: 100%;
@@ -36,22 +34,7 @@ div {
   padding: 30px 50px 50px 50px;
 }
 
-.hero {
-  align-items: center;
-  justify-content: center;
-  height: auto;
-  min-height: 40vh;
-  animation-duration: 2000ms;
-  animation-name: fadeIn;
-}
-
-.hero img {
-  max-height: 40vh;
-  pointer-events: none;
-}
-
 .tagline {
-  align-items: center;
   height: auto;
   margin-top: 40px;
   color: #ffffff;
@@ -63,63 +46,9 @@ div {
   animation-duration: 2000ms;
   animation-name: fadeIn;
 }
-
-.buttonContainer {
-  height: auto;
-  align-items: center;
-  justify-content: center;
-  margin-top: 80px;
-  opacity: 0;
-  animation-fill-mode: forwards;
-  animation-delay: 1000ms;
-  animation-duration: 2000ms;
-  animation-name: fadeIn;
+.wrapper {
+  padding-bottom: 50px;
 }
-
-.button {
-  flex-direction: row;
-  height: 100px;
-  width: 400px;
-  border-radius: 4px;
-  border: 3px solid rgba(255, 255, 255, 0.3);
-  font-size: 26px;
-  color: #ffffff;
-  transition: all ease 200ms;
-}
-
-.button:hover {
-  cursor: pointer;
-  border: 3px solid rgba(255, 255, 255, 1);
-}
-
-.button:active {
-  border-color: rgba(255, 255, 255, 0.3);
-}
-
-.buttonInner {
-  flex-direction: row;
-  align-items: center;
-  height: auto;
-  width: 100%;
-}
-
-.buttonLeft {
-  align-items: flex-end;
-  padding-top: 30px;
-  padding-right: 20px;
-  color: #fd5750;
-  font-size: 62px;
-  user-select: none;
-}
-
-.buttonRight {
-  align-items: flex-start;
-  padding-top: 36px;
-  color: #ffffff;
-  font-size: 20px;
-  user-select: none;
-}
-
 /**
  * Animations
  */
@@ -134,10 +63,6 @@ div {
   }
 }
 
-img {
-  width: 200px;
-  height: 200px;
-}
-ul li {
-  list-style: none;
+ol li {
+  text-align: left;
 }
